# nonebot_plugin_qbittorrent_manager

./: .gitignore  README.md  pyproject.toml
nonebot-plugin-qbittorrent-manager/: __init__.py
nonebot_plugin_qbittorrent_manager/: __init__.py  command.py  config.py  draw.py  qb_api.py  tools.py
