[tool.poetry]
name = "nonebot-plugin-qbittorrent-manager"
version = "0.0.1"
description = "qbittorrent管理器"
authors = ["SuperGuGuGu <from89917812@163.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
httpx = ">=0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
